crudet e pyetjeve , shtimi i nje metode per ndryshim passwordi , shtimi nje menu setting tek nderfaqa e userit per te bere ndryshime si psh password.

--- a/quiz-maker/WebContent/login.xhtml
+++ b/quiz-maker/WebContent/login.xhtml
@@ -30,7 +30,7 @@ xmlns:ui="http://java.sun.com/jsf/facelets" >
      <tr>
      <tr><td><label></label></td></tr>
       <tr><td><label></label></td></tr>
-     <td><LABEL>Password</LABEL></td>  <!--Update:arsyja se pse kalonte ne null sepse ishte sintaksa gabim #{loginBeann.password} me dy nn  -->
+     <td><LABEL>Password</LABEL></td>  
      <td><h:inputText id="password" required="true" value="#{loginBean.password}" requiredMessage="*required" /></td>
      <td ><h:message for="password" styleClass="error" /></td>
      </tr>
