--- a/quiz-maker/WebContent/user-header.xhtml
+++ b/quiz-maker/WebContent/user-header.xhtml
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en"
 xmlns="http://www.w3.org/1999/xhtml"
 xmlns:h="http://xmlns.jcp.org/jsf/html" 
@@ -10,21 +10,23 @@ xmlns:p="http://primefaces.org/ui" >
 
 </h:head>
 
- <h:body >
+ <h:body>
+ <h:form>
  <div id="divi">
 <p:tabMenu  activeIndex="#{param.i}"  >
 
  <p:menuitem value="Dashboard" outcome="userpage" icon="ui-icon-home">
   <f:param name="i" value="0" />
  </p:menuitem>
-  <p:menuitem value="Log Out" outcome="userpage" icon="ui-icon-home">
+  <p:menuitem value="Setting" outcome="setting" icon="ui-icon-setting">
+  <f:param name="i" value="2" />
+  </p:menuitem>
+  <p:menuitem value="Log Out" action="#{loginBean.logout}">
   <f:param name="i" value="2" />
  </p:menuitem>
-
 </p:tabMenu>
-
  </div> 
-
+</h:form>
 </h:body>
 
 </html>
