--- a/quiz-maker/WebContent/administrator/header.xhtml
+++ b/quiz-maker/WebContent/administrator/header.xhtml
@@ -1,44 +1,40 @@
 <!DOCTYPE html>
 <html lang="en"
-xmlns="http://www.w3.org/1999/xhtml"
-xmlns:h="http://xmlns.jcp.org/jsf/html" 
-xmlns:f="http://xmlns.jcp.org/jsf/core"
-xmlns:p="http://primefaces.org/ui" >  
+	xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:h="http://xmlns.jcp.org/jsf/html" 
+	xmlns:f="http://xmlns.jcp.org/jsf/core"
+	xmlns:p="http://primefaces.org/ui" >  
 
-<h:head><title>hello</title>
-<h:outputStylesheet library="css" name="style.css" />
+	<h:head>
+		<h:outputStylesheet library="css" name="style.css" />
+	</h:head>
 
-</h:head>
-
- <h:body >
- <h:form>
- <div id="divi">
-<p:tabMenu  activeIndex="#{param.i}"  >
-  
- <p:menuitem value="Dashboard" outcome="adminpage" icon="ui-icon-home">
-  <f:param name="i" value="0" />
- </p:menuitem>
-  <p:menuitem value="Questions" outcome="question" icon="ui-icon-extlink" >
-  <f:param name="i" value="1" />
- </p:menuitem>
- <p:menuitem value="Categories" outcome="category" icon="ui-icon-extlink" >
-  <f:param name="i" value="2" />
- </p:menuitem>
-  <p:menuitem value="Users" outcome="user" icon="ui-icon-person">
-  <f:param name="i" value="3" />
- </p:menuitem>
- <p:menuitem value="Setting" outcome="settingAdmin" icon="ui-icon-person">
-  <f:param name="i" value="4" />
- </p:menuitem>
- 
-  <p:menuitem value="Log Out" action="#{loginBean.logout}" icon="ui-icon-home">
-  <f:param name="i" value="5" />
- </p:menuitem>
-
-</p:tabMenu>
-
- </div> 
-</h:form>
-</h:body>
-
-</html>
+	<h:body >
+	
+		<h:form>
+			<div id="divi">
+				<p:tabMenu  activeIndex="#{param.i}"  >
+					<p:menuitem value="Dashboard" outcome="adminpage" icon="ui-icon-home">
+						<f:param name="i" value="0" />
+					</p:menuitem>
+					<p:menuitem value="Questions" outcome="question" icon="ui-icon-extlink" >
+						<f:param name="i" value="1" />
+					</p:menuitem>
+					<p:menuitem value="Categories" outcome="category" icon="ui-icon-extlink" >
+						<f:param name="i" value="2" />
+					</p:menuitem>
+					<p:menuitem value="Users" outcome="user" icon="ui-icon-person">
+						<f:param name="i" value="3" />
+					</p:menuitem>
+					<p:menuitem value="Setting" outcome="settingAdmin" icon="ui-icon-person">
+						<f:param name="i" value="4" />
+					</p:menuitem>
+					<p:menuitem value="Log Out" action="#{loginBean.logout}" icon="ui-icon-home">
+						<f:param name="i" value="5" />
+					</p:menuitem>
+				</p:tabMenu>
+			</div> 
+			
+		</h:form>
+		
+	</h:body>
