--- a/quiz-maker/WebContent/administrator/userUpdate.xhtml
+++ b/quiz-maker/WebContent/administrator/userUpdate.xhtml
@@ -1,46 +1,41 @@
 <!DOCTYPE html>
 <html lang="en"
-xmlns="http://www.w3.org/1999/xhtml"
-xmlns:h="http://xmlns.jcp.org/jsf/html" 
-xmlns:f="http://xmlns.jcp.org/jsf/core"
-xmlns:p="http://primefaces.org/ui" 
-xmlns:ui="http://java.sun.com/jsf/facelets" > 
+		xmlns="http://www.w3.org/1999/xhtml"
+		xmlns:h="http://xmlns.jcp.org/jsf/html" 
+		xmlns:f="http://xmlns.jcp.org/jsf/core"
+		xmlns:p="http://primefaces.org/ui" 
+		xmlns:ui="http://java.sun.com/jsf/facelets" > 
 
-<h:head><title>Users</title>
-<style>
-       .error{color:red}
-   
-    </style>
-    <h:outputStylesheet library="css" name="style.css" />
-</h:head>
+		<h:head>
+			<title>UserUpdate</title>
+			<style>.error{color:red}</style>
+			<h:outputStylesheet library="css" name="style.css" />
+		</h:head>
 
-<h:body>
+		<h:body>
 
-<ui:insert name="header" >
-		  <ui:include src="header.xhtml" />
-		</ui:insert>
+			<ui:insert name="header" >
+				<ui:include src="header.xhtml" />
+			</ui:insert>
 		
- <h:form class="forma">
-  <table >
+			<h:form class="forma">
+				<table >
+					<tr>
+						<td><label > Username</label></td>
+						<td> <h:inputText id="username" value="#{userBean.user.username}" required="true" requiredMessage="*required" /> </td>
+						<td colspan="2"><h:message for="username" styleClass="error" /></td>
+					</tr>
+					<tr>
+						<td><label >Password</label></td>
+						<td> <h:inputText id="password" required="true" value="#{userBean.user.password}" requiredMessage="*required"   /> </td>
+						<td colspan="2"><h:message for="password" styleClass="error" /></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td><h:commandButton action="#{userBean.update}" value="Update"  /> </td>
+					</tr>
   
-  <tr>
-     <td><label > Username</label></td>
-      <td> <h:inputText id="username" value="#{userBean.user.username}" required="true" requiredMessage="*required" /> </td>
-       <td colspan="2"><h:message for="username" styleClass="error" /></td>
-   </tr>
-   
-   <tr>
-     <td><label >Password</label></td>
-      <td> <h:inputText id="password" required="true" value="#{userBean.user.password}" requiredMessage="*required"   /> </td>
-       <td colspan="2"><h:message for="password" styleClass="error" /></td>
-   </tr>
-   
-   <tr><td></td><td><h:commandButton action="#{userBean.update}" value="Update"  /> </td></tr>
-  
-
-  </table>
-</h:form>
-
-</h:body>
-
+				</table>
+			</h:form>
+		</h:body>
 </html>
