--- a/quiz-maker/WebContent/user-interface.xhtml
+++ b/quiz-maker/WebContent/user-interface.xhtml
@@ -4,17 +4,18 @@
 xmlns:h="http://xmlns.jcp.org/jsf/html"
 xmlns:f="http://xmlns.jcp.org/jsf/core"
 xmlns:p="http://primefaces.org/ui" >
-<h:head>...</h:head>
-<h:body> 
-<p:tabMenu activeIndex="#{param.i}">
-    <p:menuitem value="Home" outcome="text" icon="ui-icon-star">
-        <f:param name="i" value="0" />
-         </p:menuitem>
-    <p:menuitem value="CONTACT" outcome="text" icon="ui-icon-star">
-        <f:param name="i" value="1" />
-         </p:menuitem>
-    <p:menuitem value="ABOUT" outcome="text" icon="ui-icon-star">
-        <f:param name="i" value="2" />
-         </p:menuitem>
-</p:tabMenu>            
-</h:body></html>
+	<h:head></h:head>
+	<h:body> 
+		<p:tabMenu activeIndex="#{param.i}">
+		    <p:menuitem value="Home" outcome="text" icon="ui-icon-star">
+		        <f:param name="i" value="0" />
+		     </p:menuitem>
+		    <p:menuitem value="CONTACT" outcome="text" icon="ui-icon-star">
+		        <f:param name="i" value="1" />
+		    </p:menuitem>
+		    <p:menuitem value="ABOUT" outcome="text" icon="ui-icon-star">
+		        <f:param name="i" value="2" />
+		     </p:menuitem>
+		</p:tabMenu>            
+	</h:body>
+</html>
