--- a/quiz-maker/WebContent/user/user-header.xhtml
+++ b/quiz-maker/WebContent/user/user-header.xhtml
@@ -1,32 +1,30 @@
  <!DOCTYPE html>
 <html lang="en"
-xmlns="http://www.w3.org/1999/xhtml"
-xmlns:h="http://xmlns.jcp.org/jsf/html" 
-xmlns:f="http://xmlns.jcp.org/jsf/core"
-xmlns:p="http://primefaces.org/ui" >  
+	xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:h="http://xmlns.jcp.org/jsf/html" 
+	xmlns:f="http://xmlns.jcp.org/jsf/core"
+	xmlns:p="http://primefaces.org/ui" >  
 
-<h:head><title>user dashboard</title>
-<h:outputStylesheet library="css" name="style.css" />
-
-</h:head>
-
- <h:body>
- <h:form>
- <div id="divi">
-<p:tabMenu  activeIndex="#{param.i}"  >
-
- <p:menuitem value="Dashboard" outcome="userpage" icon="ui-icon-home">
-  <f:param name="i" value="0" />
- </p:menuitem>
-  <p:menuitem value="Setting" outcome="setting" icon="ui-icon-setting">
-  <f:param name="i" value="2" />
-  </p:menuitem>
-  <p:menuitem value="Log Out" action="#{loginBean.logout}">
-  <f:param name="i" value="2" />
- </p:menuitem>
-</p:tabMenu>
- </div> 
-</h:form>
-</h:body>
+	<h:head>
+		<title>user dashboard</title>
+		<h:outputStylesheet library="css" name="style.css" />
+	</h:head>
+	<h:body>
+		<h:form>
+			<div id="divi">
+				<p:tabMenu  activeIndex="#{param.i}"  >
+					<p:menuitem value="Dashboard" outcome="userpage" icon="ui-icon-home">
+						<f:param name="i" value="0" />
+					</p:menuitem>
+					<p:menuitem value="Setting" outcome="setting" icon="ui-icon-setting">
+						<f:param name="i" value="1" />
+					</p:menuitem>
+					<p:menuitem value="Log Out" action="#{loginBean.logout}">
+						<f:param name="i" value="2" />
+					</p:menuitem>
+				</p:tabMenu>
+			</div> 
+		</h:form>
+	</h:body>
 
 </html>
