rregullimi i disa problemeve gjate strukturimit: tagu mbyllesi html tek headeri i administratorit, problemi me id per updetimin e tables gjate shtimit te nje pyetjeje te question , rregullimi i nje gabimi godi te faqa log in

--- a/quiz-maker/WebContent/login.xhtml
+++ b/quiz-maker/WebContent/login.xhtml
@@ -29,7 +29,7 @@
 							<tr>
 								<td><label></label></td></tr>
 								<td><LABEL>Password</LABEL></td>  
-								<td><p:password id="password" value="#{loginBeanBean.newPassword}" required="true" requiredMessage="*required"  /></td>
+								<td><p:password id="password" value="#{loginBean.password}" required="true" requiredMessage="*required"  /></td>
 								<td ><h:message for="password" styleClass="error" /></td>
 							</tr>
 							<tr>
