--- a/quiz-maker/WebContent/administrator/adminpage.xhtml
+++ b/quiz-maker/WebContent/administrator/adminpage.xhtml
@@ -42,7 +42,7 @@ xmlns:ui="http://java.sun.com/jsf/facelets" >
 			
 			<p:tab title="users" style="background:red">
 				<p:dataTable var="user" value="#{userBean.users}">
-					<p:column headerText="Description">
+					<p:column headerText="UserName">
 						<h:outputText value="#{user.username}"/>
 					</p:column>  
 					<p:column> 
