afishimi i pyetjeve random , gjenerimi i mesazheve gabim ne rast mos
selektimi , llogaritja e pikeve, afishimi i gabimeve tek perdoruesi.

--- a/quiz-maker/WebContent/user/userpage.xhtml
+++ b/quiz-maker/WebContent/user/userpage.xhtml
@@ -56,7 +56,7 @@
 				</tr>
 				<tr>
 					<td></td>
-					<td> <p:commandButton value="add" actionListener="#{questionBean.add}" process="@this @form" update="j_idt64:j_idt65 @form"/>  </td>  
+					<td> <p:commandButton value="add" actionListener="#{questionBean.add}" process="@this @form" update="j_idt56:j_idt58:j_idt59 @form"/>  </td>  
 				</tr>
 			</table>
 				<p:watermark value="Your question" for="question"  />
