--- a/quiz-maker/WebContent/login.xhtml
+++ b/quiz-maker/WebContent/login.xhtml
@@ -13,6 +13,10 @@
 	</h:head>
  
 	<h:body>
+	
+		<ui:insert name="header" >
+			<ui:include src="user-interface.xhtml" />
+		</ui:insert>
  
 		<div style="padding-top:10%">
 			<p:fieldset legend="Enter your information" style="margin-left:30%;margin-right:30%;" >
