--- a/quiz-maker/WebContent/quizz.xhtml
+++ b/quiz-maker/WebContent/quizz.xhtml
@@ -1,4 +1,5 @@
-!DOCTYPE html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html lang="en"
 	xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://xmlns.jcp.org/jsf/html" 
@@ -9,6 +10,9 @@
 	<h:head></h:head>
   
 	<h:body>
+		<ui:insert name="header" >
+			<ui:include src="user-interface.xhtml" />
+		</ui:insert>
 		<h:form>
 				<p:fieldset id="questions" style="margin-left:30%;margin-right:30%;" >
 						<ui:repeat var="q" value="#{quizBean.quests.entrySet().toArray()}">
@@ -51,5 +55,5 @@
 			</p:dialog>
 		</h:form>
 	</h:body>
-</html>>
+</html>
 
