--- a/quiz-maker/WebContent/user-interface.xhtml
+++ b/quiz-maker/WebContent/user-interface.xhtml
@@ -8,19 +8,19 @@ xmlns:p="http://primefaces.org/ui" >
 	<h:body> 
 	<h:form>
 		<p:tabMenu activeIndex="#{param.i}">
-			    <p:menuitem value="Home"  icon="ui-icon-star">
+			    <p:menuitem value="Home"  icon="ui-icon-star" outcome="home-page">
 			        <f:param name="i" value="0" />
 			     </p:menuitem>
 			     <p:menuitem value="PLAY" outcome="quizz" icon="ui-icon-star">
 			        <f:param name="i" value="1" />
 			     </p:menuitem>
-			     <p:menuitem value="LOG IN" outcome="login" icon="ui-icon-star">
+			     <p:menuitem value="CONTACT" outcome="login" icon="ui-icon-star">
 			        <f:param name="i" value="2" />
 			     </p:menuitem>
-			    <p:menuitem value="CONTACT"  icon="ui-icon-star">
+			    <p:menuitem value="ABOUT"  icon="ui-icon-star">
 			        <f:param name="i" value="3" />
 			    </p:menuitem>
-			    <p:menuitem value="ABOUT"  icon="ui-icon-star">
+			    <p:menuitem value="LOG IN"  icon="ui-icon-star">
 			        <f:param name="i" value="4" />
 			     </p:menuitem>
 			</p:tabMenu>     
