--- a/quiz-maker/WebContent/user-interface.xhtml
+++ b/quiz-maker/WebContent/user-interface.xhtml
@@ -4,26 +4,24 @@
 xmlns:h="http://xmlns.jcp.org/jsf/html"
 xmlns:f="http://xmlns.jcp.org/jsf/core"
 xmlns:p="http://primefaces.org/ui" >
-	<h:head></h:head>
+	<h:head>
+	</h:head>
 	<h:body> 
-	<h:form>
-		<p:tabMenu activeIndex="#{param.i}">
-			    <p:menuitem value="Home"  icon="ui-icon-star" outcome="home-page">
-			        <f:param name="i" value="0" />
-			     </p:menuitem>
-			     <p:menuitem value="PLAY" outcome="quizz" icon="ui-icon-star">
-			        <f:param name="i" value="1" />
-			     </p:menuitem>
-			     <p:menuitem value="CONTACT" outcome="login" icon="ui-icon-star">
-			        <f:param name="i" value="2" />
-			     </p:menuitem>
-			    <p:menuitem value="ABOUT"  icon="ui-icon-star">
-			        <f:param name="i" value="3" />
+		<h:form>
+			<p:tabMenu activeIndex="#{param.i}">
+			 	<p:menuitem value="Home"  icon="ui-icon-home" outcome="home-page">
+					<f:param name="i" value="0" />
+				 </p:menuitem>
+				 <p:menuitem value="PLAY" outcome="quizz" icon="ui-icon-star">
+					<f:param name="i" value="1" />
+				 </p:menuitem>
+				<p:menuitem value="ABOUT"  icon="ui-icon-person">
+				  	<f:param name="i" value="3" />
+				</p:menuitem>
+		   		<p:menuitem value="LOG IN" outcome="login" icon="ui-icon-locked">
+				 	<f:param name="i" value="4" />
 			    </p:menuitem>
-			    <p:menuitem value="LOG IN"  icon="ui-icon-star">
-			        <f:param name="i" value="4" />
-			     </p:menuitem>
-			</p:tabMenu>     
+			</p:tabMenu>    
 		</h:form>       
-	</h:body>
+		</h:body>
 </html>
