--- a/quiz-maker/WebContent/administrator/userQuestions.xhtml
+++ b/quiz-maker/WebContent/administrator/userQuestions.xhtml
@@ -49,6 +49,9 @@
 				</p:tab>
 			</p:accordionPanel>
 		</h:form>
+		<ui:insert name="footer" >
+			<ui:include src="/footer.xhtml" />
+		</ui:insert>
 	</h:body>
 
 </html>
