--- a/quiz-maker/WebContent/user/user-header.xhtml
+++ b/quiz-maker/WebContent/user/user-header.xhtml
@@ -19,7 +19,7 @@
 					<p:menuitem value="Setting" outcome="setting" icon="ui-icon-setting">
 						<f:param name="i" value="1" />
 					</p:menuitem>
-					<p:menuitem value="Log Out" action="#{loginBean.logout}">
+					<p:menuitem value="Log Out" action="#{loginBean.logout}" icon="ui-icon-key">
 						<f:param name="i" value="2" />
 					</p:menuitem>
 				</p:tabMenu>
