--- a/quiz-maker/WebContent/administrator/categoryQuestions.xhtml
+++ b/quiz-maker/WebContent/administrator/categoryQuestions.xhtml
@@ -48,7 +48,11 @@ xmlns:ui="http://java.sun.com/jsf/facelets" >
 			</p:accordionPanel>
 			
 		</h:form>
+		<ui:insert name="footer" >
+			<ui:include src="/footer.xhtml" />
+		</ui:insert>
 
  </h:body>
+ 
 
 </html>
