--- a/quiz-maker/WebContent/administrator/header.xhtml
+++ b/quiz-maker/WebContent/administrator/header.xhtml
@@ -17,19 +17,19 @@
 					<p:menuitem value="Dashboard" outcome="adminpage" icon="ui-icon-home">
 						<f:param name="i" value="0" />
 					</p:menuitem>
-					<p:menuitem value="Questions" outcome="question" icon="ui-icon-extlink" >
+					<p:menuitem value="Questions" outcome="question" icon="ui-icon-help" >
 						<f:param name="i" value="1" />
 					</p:menuitem>
-					<p:menuitem value="Categories" outcome="category" icon="ui-icon-extlink" >
+					<p:menuitem value="Categories" outcome="category" icon="ui-icon-document" >
 						<f:param name="i" value="2" />
 					</p:menuitem>
 					<p:menuitem value="Users" outcome="user" icon="ui-icon-person">
 						<f:param name="i" value="3" />
 					</p:menuitem>
-					<p:menuitem value="Setting" outcome="settingAdmin" icon="ui-icon-person">
+					<p:menuitem value="Setting" outcome="settingAdmin" icon="ui-icon-setting">
 						<f:param name="i" value="4" />
 					</p:menuitem>
-					<p:menuitem value="Log Out" action="#{loginBean.logout}" icon="ui-icon-home">
+					<p:menuitem value="Log Out" action="#{loginBean.logout}" icon="ui-icon-key">
 						<f:param name="i" value="5" />
 					</p:menuitem>
 				</p:tabMenu>
