--- a/quiz-maker/WebContent/user/questionUpdate.xhtml
+++ b/quiz-maker/WebContent/user/questionUpdate.xhtml
@@ -61,7 +61,7 @@ xmlns:ui="http://java.sun.com/jsf/facelets" >
 			</div>
 		</h:form>
 		<ui:insert name="footer" >
-			<ui:include src="footer.xhtml" />
+			<ui:include src="/footer.xhtml" />
 		</ui:insert>
 	</h:body>
 </html>	
