--- a/quiz-maker/WebContent/administrator/questionUpdateAdmin.xhtml
+++ b/quiz-maker/WebContent/administrator/questionUpdateAdmin.xhtml
@@ -21,7 +21,7 @@
 				<p:growl id="msgs" showDetail="true" />
 				<p:fieldset legend="Question" style="margin-bottom:20px">
 					<h:panelGrid columns="1" cellpadding="5" >
-						<h:graphicImage library="image" name ="#{questionBean.question.image}" alt="No image"/>
+						<h:graphicImage library="image" name ="#{questionBean.question.image}" alt="No image" rendered ="#{not empty questionBean.question.image}"/>
           
 						<p:outputLabel value="Change picture" for="fileupload" />
 						<p:fileUpload id="fileupload" value="#{questionBean.file}" mode="simple" allowTypes="/(\.|\/)(gif|jpe?g|png)$/" />
