--- a/quiz-maker/WebContent/user/questionUpdate.xhtml
+++ b/quiz-maker/WebContent/user/questionUpdate.xhtml
@@ -21,9 +21,9 @@ xmlns:ui="http://java.sun.com/jsf/facelets" >
 				<p:growl id="msgs" showDetail="true" />
 				<p:fieldset legend="Question" style="margin-bottom:20px">
 					<h:panelGrid columns="1" cellpadding="5" >
-          					<h:graphicImage library="image" name ="#{questionBean.question.image}" alt="No image"/>
+          					<h:graphicImage library="image" name ="#{questionBean.question.image}" alt="No image" rendered ="#{not empty questionBean.question.image}"/>
 						<p:outputLabel value="Change picture" for="fileupload" />
-						<p:fileUpload id="fileupload" value="#{questionBean.file}" mode="simple" allowTypes="/(\.|\/)(gif|jpe?g|png)$/" />
+						<p:fileUpload id="fileupload" value="#{questionBean.file}" mode="simple" />
 						<p:separator />
 					
 						<p:outputLabel value="Category:" for="categ" />
