--- a/quiz-maker/WebContent/user/quizz.xhtml
+++ b/quiz-maker/WebContent/user/quizz.xhtml
@@ -11,7 +11,7 @@
   
 	<h:body >
 		<ui:insert name="header" >
-			<ui:include src="user-interface.xhtml" />
+			<ui:include src="user-header.xhtml" />
 		</ui:insert>
 		<div style=" text-align: center; font-size: 30px; font-weight:bold ;font-family: Times New Roman; color:#93cae8 ">
 		YOUR QUIZZ
@@ -60,7 +60,7 @@
 			</p:dialog>
 		</h:form>
 		<ui:insert name="footer" >
-			<ui:include src="footer.xhtml" />
+			<ui:include src="/footer.xhtml" />
 		</ui:insert>
 	</h:body>
 </html>
