--- a/quiz-maker/WebContent/administrator/question.xhtml
+++ b/quiz-maker/WebContent/administrator/question.xhtml
@@ -58,7 +58,7 @@
 						<p:message for="answer3" />
 						</h:panelGrid>
 						
-						<p:commandButton ajax="false " value="add" actionListener="#{questionBean.add}" process="@this @form" update=" @form"/>	
+						<p:commandButton ajax="false " value="add" actionListener="#{questionBean.add}" process="@this @form" update="j_idt74:j_idt75:j_idt76 @form"/>	
 						
 					</p:panel>
 				</p:tab>
