--- a/quiz-maker/WebContent/administrator/questionView.xhtml
+++ b/quiz-maker/WebContent/administrator/questionView.xhtml
@@ -17,7 +17,7 @@
 		</ui:insert>
 		
 		<h:form>
-			<h:graphicImage library="image" name ="#{questionBean.question.image}" alt="No image" style="width: 450px" />
+			<h:graphicImage library="image" name ="#{questionBean.question.image}" alt="No image" style="width: 450px" rendered="#{not empty questionBean.question.image}"/>
 			<p:panelGrid  columns="2" cellpadding="5">
 			
 				<h:outputLabel for="name" value="Question Name"></h:outputLabel>
