--- a/quiz-maker/WebContent/footer.xhtml
+++ b/quiz-maker/WebContent/footer.xhtml
@@ -4,14 +4,21 @@
 xmlns:h="http://xmlns.jcp.org/jsf/html"
 xmlns:f="http://xmlns.jcp.org/jsf/core"
 xmlns:p="http://primefaces.org/ui" >
-	<h:head></h:head>
-	<h:body> 
-		<p:spacer height="2" />
-		<p:separator />
-		<div style="padding-left: 400px; color:gray" > © 2016 Akademia IkubINFO  | All rights reserved.
-		   <p:graphicImage library="image"  name="social.jpg" style="width: 25; height: 25px;padding-left:250px"/>
-        </div>
+	<h:head>
+	</h:head>
+	
+	<h:body>
+	 
+		<p:spacer height="200" />
 		
-		  
+		<p:separator />
+		
+		<div style=" margin-left: 350px; color:gray;" >
+		   © 2016 Akademia IkubINFO  | All rights reserved.
+		   <p:graphicImage library="image"  name="fc.png" style="width: 25; height: 25px; margin-left: 200px"/>
+           <p:graphicImage library="image"  name="twt.png" style="width: 25; height: 25px; margin-left: 10px;"/>
+        </div>
+	  
 	</h:body>
+	
 </html>
