--- a/quiz-maker/WebContent/user/home-page.xhtml
+++ b/quiz-maker/WebContent/user/home-page.xhtml
@@ -8,7 +8,7 @@
 	
 	<h:body style="background-color:#D3D3D3;">
 		<ui:insert name="header" >
-			<ui:include src="user-interface.xhtml" />
+			<ui:include src="user-header.xhtml" />
 		</ui:insert>
 		<div style="margin-bottom:25px;"> 	           
 			<h:link  outcome="quizz" >
@@ -16,7 +16,7 @@
 			</h:link>	  
 	    </div>          
 			<ui:insert name="footer" >
-				<ui:include src="footer.xhtml" />
+				<ui:include src="/footer.xhtml" />
 			</ui:insert>
 		</h:body>
 		
