--- a/quiz-maker/WebContent/administrator/categoryUpdate.xhtml
+++ b/quiz-maker/WebContent/administrator/categoryUpdate.xhtml
@@ -18,7 +18,7 @@
 			<ui:include src="header.xhtml" />
 		</ui:insert>
 		
-		<div style="text-align:center; margin-right: 350px;margin-left: 179px">
+		<div style=" margin-left: 550px; margin-top: 99px;">
 			<h:form>
 			 <p:growl id="growl"  showDetail="true"/>
 				<p:tab >
