--- a/quiz-maker/WebContent/home-page.xhtml
+++ b/quiz-maker/WebContent/home-page.xhtml
@@ -10,9 +10,9 @@
 		<ui:insert name="header" >
 			<ui:include src="user-interface.xhtml" />
 		</ui:insert>
-		<div style="margin-bottom:25px;"> 	           
-			<h:link  outcome="quizz" >
-				<h:graphicImage library="image"  name="img11.png" value="quizz" style="padding-top:8%; margin-left:35%" />
+		<div > 	           
+			<h:link  outcome="quizz"  >
+				<h:graphicImage library="image"  name="img11.png" value="quizz" style="padding-top:5%;padding-left:38%;"  />
 			</h:link>	  
 	    </div>          
 			<ui:insert name="footer" >
