--- a/quiz-maker/WebContent/login.xhtml
+++ b/quiz-maker/WebContent/login.xhtml
@@ -38,7 +38,7 @@
 	        </h:form>   
 	        <h:form>
 	       		 <h:outputText value="Not a member yet ?" style="margin-left:25%;" />
-	        	<p:link value="Click here" href="http://localhost:8080/QuizMaker/faces/singup.xhtml" />
+	        	<p:link value="Click here" href="singup.xhtml" />
 			</h:form>
 		</div>
 		<ui:insert name="footer" >
