--- a/quiz-maker/WebContent/user-interface.xhtml
+++ b/quiz-maker/WebContent/user-interface.xhtml
@@ -15,7 +15,7 @@ xmlns:p="http://primefaces.org/ui" >
 				 <p:menuitem value="PLAY" outcome="quizz" icon="ui-icon-star">
 					<f:param name="i" value="1" />
 				 </p:menuitem>
-				<p:menuitem value="ABOUT"  icon="ui-icon-person">
+				<p:menuitem value="ABOUT"  icon="ui-icon-person" outcome="about">
 				  	<f:param name="i" value="3" />
 				</p:menuitem>
 		   		<p:menuitem value="LOG IN" outcome="login" icon="ui-icon-locked">
