--- a/quiz-maker/WebContent/quizz.xhtml
+++ b/quiz-maker/WebContent/quizz.xhtml
@@ -17,7 +17,7 @@
 		YOUR QUIZZ
 		</div>
 		<h:form >
-				<p:fieldset id="questions" style="margin-left:30%;margin-right:30%"  >
+				<p:fieldset id="questions" style="margin-left:30%;margin-right:30% ;"  >
 						<ui:repeat var="q" value="#{quizBean.quests.entrySet().toArray()}" >
 							<h:outputText value="#{q.key.name}" /> <br></br>
 							<h:graphicImage library="image" name ="#{q.key.image}" alt="No image" rendered="#{not empty q.key.image}" width="531" height="294" />
