rregullim i nje problemi navigimi

--- a/quiz-maker/WebContent/user/user-header.xhtml
+++ b/quiz-maker/WebContent/user/user-header.xhtml
@@ -22,7 +22,7 @@
 						<f:param name="i" value="1" />
 				 	</p:menuitem>
 				 	
-					<p:menuitem value="Dashboard" outcome="userpage" icon="ui-icon-home">
+					<p:menuitem value="Dashboard" action="#{questionBean.getPage}" icon="ui-icon-home">
 						<f:param name="i" value="2" />
 					</p:menuitem>
 				 
