--- a/quiz-maker/WebContent/administrator/questionUpdateAdmin.xhtml
+++ b/quiz-maker/WebContent/administrator/questionUpdateAdmin.xhtml
@@ -24,7 +24,8 @@
 						<h:graphicImage library="image" name ="#{questionBean.question.image}" alt="No image" rendered ="#{not empty questionBean.question.image}"/>
           
 						<p:outputLabel value="Change picture" for="fileupload" />
-						<p:fileUpload id="fileupload" value="#{questionBean.file}" mode="simple" allowTypes="/(\.|\/)(gif|jpe?g|png)$/" />
+						<p:fileUpload id="fileupload" value="#{questionBean.file}" mode="simple" allowTypes="/(\.|\/)(gif|jpe?g|png)$/" sizeLimit="100000" />
+						<p:message for="fileupload" />
 						<p:separator />
 					
 						<p:outputLabel value="Category:" for="categ" />
